--- a/menu.html
+++ b/menu.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Title</title>
         <script src="https://unpkg.com/feather-icons"></script>
-        <link href="../general.css" rel="stylesheet" />
-        <link href="main-menu.css" rel="stylesheet" />
+        <link href="css/general.css" rel="stylesheet" />
+        <link href="css/menu.css" rel="stylesheet" />
     </head>
     <body>
         <div class="landing">
@@ -155,6 +155,9 @@
                 <button class="btn-main" id="modal-close">Okay</button>
             </div>
         </dialog>
-        <script src="./main-menu.js"></script>
+        <script>
+            feather.replace();
+        </script>
+        <script src="js/menu.js"></script>
     </body>
 </html>
