--- a/menu.html
+++ b/menu.html
@@ -6,65 +6,68 @@
         <title>Title</title>
         <script src="https://unpkg.com/feather-icons"></script>
         <link href="css/general.css" rel="stylesheet" />
+        <link href="css/header.css" rel="stylesheet" />
         <link href="css/menu.css" rel="stylesheet" />
     </head>
     <body>
         <div class="landing">
-            <div class="header">
+            <div class="header__wrap">
                 <div class="header__background">
                     <img src="./images/background_main.png" alt="image" class="header__bg-image" />
                 </div>
-                <div class="logo">
-                    <img src="./images/logo.png" alt="Restaurant logo" />
-                </div>
-                <div class="header__navigation">
-                    <div class="lang">
-                        <div class="lang__toggle" id="lang__toggle">
-                            <span class="lang__toggle__name">UA</span>
-                            <i class="lang__toggle__icon" data-feather="chevron-down"></i>
-                            <i
-                                class="lang__toggle__icon lang__toggle__icon--up lang__toggle__icon--closed"
-                                data-feather="chevron-up"
-                            ></i>
-                        </div>
-                        <ul class="lang__dropdown" id="lang__dropdown">
-                            <li class="lang__dropdown__item">
-                                <span data-lang="UA">Ukrainian</span>
-                            </li>
-                            <li class="lang__dropdown__item">
-                                <span data-lang="EN">English</span>
-                            </li>
-                        </ul>
+                <header class="header">
+                    <div class="logo">
+                        <img src="./images/logo.png" alt="Restaurant logo" />
                     </div>
-                    <div class="burger-menu">
-                        <div class="burger-menu__icon" id="burger-menu__icon">
-                            <i data-feather="menu"></i>
-                        </div>
-                        <div class="menu" id="menu">
-                            <div class="menu__btn-close" id="menu__btn-close">
-                                <i data-feather="x"></i>
+                    <div class="header__navigation">
+                        <div class="lang">
+                            <div class="lang__toggle" id="lang__toggle">
+                                <span class="lang__toggle__name">UA</span>
+                                <i class="lang__toggle__icon" data-feather="chevron-down"></i>
+                                <i
+                                    class="lang__toggle__icon lang__toggle__icon--up lang__toggle__icon--closed"
+                                    data-feather="chevron-up"
+                                ></i>
                             </div>
-                            <div class="menu__content">
-                                <div class="menu__item">
-                                    <i data-feather="globe" class="menu__item_icon"></i>
-                                    <a href="#" target="_blank" class="menu__item_link">Наш веб-сайт</a>
+                            <ul class="lang__dropdown" id="lang__dropdown">
+                                <li class="lang__dropdown__item">
+                                    <span data-lang="UA">Ukrainian</span>
+                                </li>
+                                <li class="lang__dropdown__item">
+                                    <span data-lang="EN">English</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="burger-menu">
+                            <div class="burger-menu__icon" id="burger-menu__icon">
+                                <i data-feather="menu"></i>
+                            </div>
+                            <div class="menu" id="menu">
+                                <div class="menu__btn-close" id="menu__btn-close">
+                                    <i data-feather="x"></i>
                                 </div>
-                                <div class="menu__item">
-                                    <i data-feather="facebook" class="menu__item_icon"></i>
-                                    <a href="https://www.facebook.com/" target="_blank" class="menu__item_link"
-                                        >Facebook</a
-                                    >
-                                </div>
-                                <div class="menu__item">
-                                    <i data-feather="instagram" class="menu__item_icon"></i>
-                                    <a href="https://www.instagram.com" target="_blank" class="menu__item_link"
-                                        >Instagram</a
-                                    >
+                                <div class="menu__content">
+                                    <div class="menu__item">
+                                        <i data-feather="globe" class="menu__item_icon"></i>
+                                        <a href="#" target="_blank" class="menu__item_link">Наш веб-сайт</a>
+                                    </div>
+                                    <div class="menu__item">
+                                        <i data-feather="facebook" class="menu__item_icon"></i>
+                                        <a href="https://www.facebook.com/" target="_blank" class="menu__item_link"
+                                            >Facebook</a
+                                        >
+                                    </div>
+                                    <div class="menu__item">
+                                        <i data-feather="instagram" class="menu__item_icon"></i>
+                                        <a href="https://www.instagram.com" target="_blank" class="menu__item_link"
+                                            >Instagram</a
+                                        >
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </header>
             </div>
             <div class="main">
                 <div class="service-info">
@@ -158,6 +161,7 @@
         <script>
             feather.replace();
         </script>
+        <script src="js/header.js"></script>
         <script src="js/menu.js"></script>
     </body>
 </html>
