Special Proposals Window

--- a/index.html
+++ b/index.html
@@ -266,53 +266,93 @@
         </div>
         <div class="special-menu" id="special-menu">
             <div class="special-menu__header">
-                <h2 class="special-menu__title">Special Proposals</h2>
+                <h2 class="special-menu__title">Спеціальні пропозиції</h2>
                 <div class="special-menu__btn-close" id="special-menu__btn-close">
                     <i data-feather="x"></i>
                 </div>
             </div>
             <div class="swiper__wrap">
-                <div class="swiper swiper--menu">
+                <div class="slider">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide swiper--menu__slide">
-                            <div class="slide__img">
-                                <img src="./images/meal-special-1.png" alt="Special Proposition Image" />
+                        <div class="swiper-slide dish--expandable dish--expandable--open">
+                            <div class="dish__img">
+                                <img src="./images/meal-1.jpg" alt="Dish Image" />
                             </div>
-                            <div class="slide__info">
-                                <p class="slide__name">Салат</p>
-                                <div class="price price--green">100$</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide swiper--menu__slide">
-                            <div class="slide__img">
-                                <img src="./images/meal-special-1.png" alt="Special Proposition Image" />
-                            </div>
-                            <div class="slide__info">
-                                <p class="slide__name">Салат з помідорами, куркою, огірком та капустою</p>
-                                <div class="price price--green">2000$</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide swiper--menu__slide">
-                            <div class="slide__img">
-                                <img src="./images/meal-special-1.png" alt="Special Proposition Image" />
-                            </div>
-                            <div class="slide__info">
-                                <p class="slide__name">Салат</p>
-                                <div class="price price--green">100$</div>
+                            <div class="dish__info">
+                                <p class="dish__name">Круасан з апельсином</p>
+                                <p class="dish__description">
+                                    Круаса́н — традиційний для французької та австрійської кухонь невеликий
+                                    хлібо-булочний кондитерський виріб із листкового тіста у формі півмісяця з начинкою
+                                    або без. Свого роду традиційний для України виріб під назвою рогалик, але той
+                                    зазвичай не готується з листкового тіста і може бути більш загнутим
+                                </p>
+                                <div class="dish__info__specification">
+                                    <div class="dish__price price price--green">12345$</div>
+                                    <span class="dish__weight">100 г</span>
+                                    <span class="dish__calorie">325 Ккал.</span>
+                                </div>
                             </div>
                         </div>
-                        <div class="swiper-slide swiper--menu__slide">
-                            <div class="slide__img">
-                                <img src="./images/meal-special-1.png" alt="Special Proposition Image" />
+                        <div class="swiper-slide dish--expandable dish--expandable--open">
+                            <div class="dish__img">
+                                <img src="./images/meal-1.jpg" alt="Dish Image" />
                             </div>
-                            <div class="slide__info">
-                                <p class="slide__name">Салат</p>
-                                <div class="price price--green">100$</div>
+                            <div class="dish__info">
+                                <p class="dish__name">Круасан з апельсином</p>
+                                <p class="dish__description">
+                                    Круаса́н — традиційний для французької та австрійської кухонь невеликий
+                                    хлібо-булочний кондитерський виріб із листкового тіста у формі півмісяця з начинкою
+                                    або без. Свого роду традиційний для України виріб під назвою рогалик, але той
+                                    зазвичай не готується з листкового тіста і може бути більш загнутим
+                                </p>
+                                <div class="dish__info__specification">
+                                    <div class="dish__price price price--green">12345$</div>
+                                    <span class="dish__weight">100 г</span>
+                                    <span class="dish__calorie">325 Ккал.</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide dish--expandable dish--expandable--open">
+                            <div class="dish__img">
+                                <img src="./images/meal-1.jpg" alt="Dish Image" />
+                            </div>
+                            <div class="dish__info">
+                                <p class="dish__name">Круасан з апельсином</p>
+                                <p class="dish__description">
+                                    Круаса́н — традиційний для французької та австрійської кухонь невеликий
+                                    хлібо-булочний кондитерський виріб із листкового тіста у формі півмісяця з начинкою
+                                    або без. Свого роду традиційний для України виріб під назвою рогалик, але той
+                                    зазвичай не готується з листкового тіста і може бути більш загнутим
+                                </p>
+                                <div class="dish__info__specification">
+                                    <div class="dish__price price price--green">12345$</div>
+                                    <span class="dish__weight">100 г</span>
+                                    <span class="dish__calorie">325 Ккал.</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide dish--expandable dish--expandable--open">
+                            <div class="dish__img">
+                                <img src="./images/meal-1.jpg" alt="Dish Image" />
+                            </div>
+                            <div class="dish__info">
+                                <p class="dish__name">Круасан з апельсином</p>
+                                <p class="dish__description">
+                                    Круаса́н — традиційний для французької та австрійської кухонь невеликий
+                                    хлібо-булочний кондитерський виріб із листкового тіста у формі півмісяця з начинкою
+                                    або без. Свого роду традиційний для України виріб під назвою рогалик, але той
+                                    зазвичай не готується з листкового тіста і може бути більш загнутим
+                                </p>
+                                <div class="dish__info__specification">
+                                    <div class="dish__price price price--green">12345$</div>
+                                    <span class="dish__weight">100 г</span>
+                                    <span class="dish__calorie">325 Ккал.</span>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <div class="slider-pagination"></div>
                 </div>
-                <div class="swiper-pagination"></div>
             </div>
         </div>
         <script>
