Fix Styles According To Design

--- a/menu.html
+++ b/menu.html
@@ -72,38 +72,38 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide swiper--menu__slide" id="swiper--menu__slide-1">
                             <div class="slide__img">
-                                <img src="./images/meal-special-1.png" alt="Special Proposition Image" />
+                                <img src="./images/salad.jpg" alt="Special Proposition Image" />
                             </div>
                             <div class="slide__info">
                                 <p class="slide__name">Салат</p>
-                                <div class="price price--green">100$</div>
+                                <div class="price price--green">100 $</div>
                             </div>
                         </div>
                         <div class="swiper-slide swiper--menu__slide" id="swiper--menu__slide-2">
                             <div class="slide__img">
-                                <img src="./images/meal-special-1.png" alt="Special Proposition Image" />
+                                <img src="./images/salad.jpg" alt="Special Proposition Image" />
                             </div>
                             <div class="slide__info">
                                 <p class="slide__name">Салат з помідорами, куркою, огірком та капустою</p>
-                                <div class="price price--green">2000$</div>
+                                <div class="price price--green">2000 $</div>
                             </div>
                         </div>
                         <div class="swiper-slide swiper--menu__slide" id="swiper--menu__slide-3">
                             <div class="slide__img">
-                                <img src="./images/meal-special-1.png" alt="Special Proposition Image" />
+                                <img src="./images/salad.jpg" alt="Special Proposition Image" />
                             </div>
                             <div class="slide__info">
                                 <p class="slide__name">Салат</p>
-                                <div class="price price--green">100$</div>
+                                <div class="price price--green">100 $</div>
                             </div>
                         </div>
                         <div class="swiper-slide swiper--menu__slide" id="swiper--menu__slide-4">
                             <div class="slide__img">
-                                <img src="./images/meal-special-1.png" alt="Special Proposition Image" />
+                                <img src="./images/salad.jpg" alt="Special Proposition Image" />
                             </div>
                             <div class="slide__info">
                                 <p class="slide__name">Салат</p>
-                                <div class="price price--green">100$</div>
+                                <div class="price price--green">100 $</div>
                             </div>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                         <div class="dish__list">
                             <div class="dish" id="dish-1">
                                 <div class="dish__img">
-                                    <img src="./images/meal-1.jpg" alt="Dish Image" />
+                                    <img src="./images/meat.jpg" alt="Dish Image" />
                                 </div>
                                 <div class="dish__info">
                                     <p class="dish__name"
@@ -142,7 +142,7 @@
                                         але той зазвичай не готується з листкового тіста і може бути більш загнутим
                                     </p>
                                     <div class="dish__info__specification">
-                                        <div class="dish__price price">100$</div>
+                                        <div class="dish__price price">100 $</div>
                                         <span class="dish__weight">100 г</span>
                                         <span class="dish__calorie">325 Ккал.</span>
                                     </div>
@@ -150,7 +150,7 @@
                             </div>
                             <div class="dish" id="dish-2">
                                 <div class="dish__img">
-                                    <img src="./images/meal-1.jpg" alt="Dish Image" />
+                                    <img src="./images/meat.jpg" alt="Dish Image" />
                                 </div>
                                 <div class="dish__info">
                                     <p class="dish__name">Круасан з апельсином </p>
@@ -161,7 +161,7 @@
                                         але той зазвичай не готується з листкового тіста і може бути більш загнутим
                                     </p>
                                     <div class="dish__info__specification">
-                                        <div class="dish__price price">100$</div>
+                                        <div class="dish__price price">100 $</div>
                                         <span class="dish__weight">100 г</span>
                                         <span class="dish__calorie">325 Ккал.</span>
                                     </div>
@@ -177,7 +177,7 @@
                                         але той зазвичай не готується з листкового тіста і може бути більш загнутим
                                     </p>
                                     <div class="dish__info__specification">
-                                        <div class="dish__price price">12345$</div>
+                                        <div class="dish__price price">12345 $</div>
                                         <span class="dish__weight">459 г</span>
                                         <span class="dish__calorie">325 Ккал.</span>
                                     </div>
@@ -190,7 +190,7 @@
                         <div class="dish__list">
                             <div class="dish">
                                 <div class="dish__img">
-                                    <img src="./images/meal-1.jpg" alt="Dish Image" />
+                                    <img src="./images/meat.jpg" alt="Dish Image" />
                                 </div>
                                 <div class="dish__info">
                                     <p class="dish__name">Круасан мармеладом </p>
@@ -201,7 +201,7 @@
                                         але той зазвичай не готується з листкового тіста і може бути більш загнутим
                                     </p>
                                     <div class="dish__info__specification">
-                                        <div class="dish__price price">100$</div>
+                                        <div class="dish__price price">100 $</div>
                                         <span class="dish__weight">100 г</span>
                                         <span class="dish__calorie">325 Ккал.</span>
                                     </div>
@@ -209,12 +209,12 @@
                             </div>
                             <div class="dish">
                                 <div class="dish__img">
-                                    <img src="./images/meal-1.jpg" alt="Dish Image" />
+                                    <img src="./images/meat.jpg" alt="Dish Image" />
                                 </div>
                                 <div class="dish__info">
                                     <p class="dish__name">Круасан з апельсином </p>
                                     <div class="dish__info__specification">
-                                        <div class="dish__price price">100$</div>
+                                        <div class="dish__price price">100 $</div>
                                         <span class="dish__weight">100 г</span>
                                         <span class="dish__calorie">325 Ккал.</span>
                                     </div>
@@ -235,9 +235,9 @@
             <div class="swiper__wrap">
                 <div class="slider">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide dish--expand">
+                        <div class="swiper-slide dish dish--expand">
                             <div class="dish__img">
-                                <img src="./images/meal-1.jpg" alt="Dish Image" />
+                                <img src="./images/meat.jpg" alt="Dish Image" />
                             </div>
                             <div class="dish__info">
                                 <p class="dish__name">Круасан з апельсином</p>
@@ -248,15 +248,15 @@
                                     зазвичай не готується з листкового тіста і може бути більш загнутим
                                 </p>
                                 <div class="dish__info__specification">
-                                    <div class="dish__price price price--green">12345$</div>
+                                    <div class="dish__price price price--green">12345 $</div>
                                     <span class="dish__weight">100 г</span>
                                     <span class="dish__calorie">325 Ккал.</span>
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide dish--expand">
+                        <div class="swiper-slide dish dish--expand">
                             <div class="dish__img">
-                                <img src="./images/meal-1.jpg" alt="Dish Image" />
+                                <img src="./images/meat.jpg" alt="Dish Image" />
                             </div>
                             <div class="dish__info">
                                 <p class="dish__name">Круасан з апельсином</p>
@@ -267,15 +267,15 @@
                                     зазвичай не готується з листкового тіста і може бути більш загнутим
                                 </p>
                                 <div class="dish__info__specification">
-                                    <div class="dish__price price price--green">12345$</div>
+                                    <div class="dish__price price price--green">12345 $</div>
                                     <span class="dish__weight">100 г</span>
                                     <span class="dish__calorie">325 Ккал.</span>
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide dish--expand">
+                        <div class="swiper-slide dish dish--expand">
                             <div class="dish__img">
-                                <img src="./images/meal-1.jpg" alt="Dish Image" />
+                                <img src="./images/meat.jpg" alt="Dish Image" />
                             </div>
                             <div class="dish__info">
                                 <p class="dish__name">Круасан з апельсином</p>
@@ -286,15 +286,15 @@
                                     зазвичай не готується з листкового тіста і може бути більш загнутим
                                 </p>
                                 <div class="dish__info__specification">
-                                    <div class="dish__price price price--green">12345$</div>
+                                    <div class="dish__price price price--green">12345 $</div>
                                     <span class="dish__weight">100 г</span>
                                     <span class="dish__calorie">325 Ккал.</span>
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide dish--expand">
+                        <div class="swiper-slide dish dish--expand">
                             <div class="dish__img">
-                                <img src="./images/meal-1.jpg" alt="Dish Image" />
+                                <img src="./images/meat.jpg" alt="Dish Image" />
                             </div>
                             <div class="dish__info">
                                 <p class="dish__name">Круасан з апельсином</p>
@@ -305,7 +305,7 @@
                                     зазвичай не готується з листкового тіста і може бути більш загнутим
                                 </p>
                                 <div class="dish__info__specification">
-                                    <div class="dish__price price price--green">12345$</div>
+                                    <div class="dish__price price price--green">12345 $</div>
                                     <span class="dish__weight">100 г</span>
                                     <span class="dish__calorie">325 Ккал.</span>
                                 </div>
