--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="landing">
             <div class="header__wrap">
                 <div class="header__background">
-                    <img src="./images/background_main.png" alt="image" class="header__bg-image" />
+                    <img src="./images/main-bg.jpg" alt="image" class="header__bg-image" />
                 </div>
                 <header class="header">
                     <div class="header__navigation">
