Fix Add Padding To Align Price And Category Blocks

--- a/menu.html
+++ b/menu.html
@@ -142,7 +142,9 @@
                                         але той зазвичай не готується з листкового тіста і може бути більш загнутим
                                     </p>
                                     <div class="dish__info__specification">
-                                        <div class="dish__price price">100 $</div>
+                                        <div class="dish__price price">
+                                            <span>100 $</span>
+                                        </div>
                                         <span class="dish__weight">100 г</span>
                                         <span class="dish__calorie">325 Ккал.</span>
                                     </div>
