Fix Add Page Footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="https://unpkg.com/feather-icons"></script>
         <link href="css/general.css" rel="stylesheet" />
         <link href="css/header.css" rel="stylesheet" />
+        <link href="css/footer.css" rel="stylesheet" />
         <link href="css/menu.css" rel="stylesheet" />
     </head>
     <body>
@@ -82,9 +83,15 @@
                     </div>
                 </div>
             </div>
-            <div class="footer">
+            <div class="btn-main__wrapper">
                 <button class="btn-main">Menu</button>
             </div>
+            <footer class="footer">
+                <span class="footer__text">Створено на</span>
+                <div class="footer__img">
+                    <img src="./images/orry-logo.svg" alt="Orry Logo">
+                </div>
+            </footer>
         </div>
 
         <!--MODAL-->
