--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
         <link href="css/general.css" rel="stylesheet" />
         <link href="css/header.css" rel="stylesheet" />
+        <link href="css/footer.css" rel="stylesheet" />
         <link href="css/main-menu.css" rel="stylesheet" />
     </head>
     <body>
@@ -226,6 +227,12 @@
                     </div>
                 </section>
             </main>
+            <footer class="footer">
+                <span class="footer__text">Створено на</span>
+                <div class="footer__img">
+                    <img src="./images/orry-logo.svg" alt="Orry Logo">
+                </div>
+            </footer>
         </div>
         <div class="special-menu" id="special-menu">
             <div class="special-menu__header">
