Fix Adjust Styles For First Page

--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
                         </div>
                         <div class="burger-menu">
                             <div class="burger-menu__icon" id="burger-menu__icon">
-                                <i data-feather="menu"></i>
+                                <div class="burger-menu__line"></div>
+                                <div class="burger-menu__line"></div>
+                                <div class="burger-menu__line"></div>
                             </div>
                             <div class="menu" id="menu">
                                 <div class="menu__btn-close" id="menu__btn-close">
-                                    <i data-feather="x"></i>
+                                    <img src="./images/btn_close.svg" alt="Close button">
                                 </div>
                                 <div class="menu__content">
                                     <div class="menu__item">
@@ -84,7 +86,7 @@
                 </div>
             </div>
             <div class="btn-main__wrapper">
-                <button class="btn-main">Menu</button>
+                <button class="btn-main">Меню</button>
             </div>
             <footer class="footer">
                 <span class="footer__text">Створено на</span>
@@ -98,7 +100,7 @@
         <dialog class="modal" id="modal">
             <div class="modal--wifi" id="modal-wifi">
                 <div class="modal__header">
-                    <div class="modal__header__icon">
+                    <div class="modal__header__icon modal__header__icon--wifi">
                         <i data-feather="wifi"></i>
                     </div>
                     <h3 class="modal__header__title">WIFI</h3>
